测试保存网页上所有图片

--- a/WebDownload/WebDownloader.csproj
+++ b/WebDownload/WebDownloader.csproj
@@ -132,6 +132,10 @@
       <DependentUpon>CefWebBrowerX.cs</DependentUpon>
     </Compile>
     <Compile Include="CefHandler\CefLifeSpanHandler.cs" />
+    <Compile Include="CefHandler\CefRequestHandler.cs" />
+    <Compile Include="CefHandler\CefResourceRequestHandler.cs" />
+    <Compile Include="CefHandler\CefResourceRequestHandlerFactory.cs" />
+    <Compile Include="CefHandler\CefResponseFilter.cs" />
     <Compile Include="CefHandler\NewWindowEventArgs.cs" />
     <Compile Include="Browser\TabBrowsers.cs">
       <SubType>UserControl</SubType>
