--- a/WebDownload/WebDownloader.csproj
+++ b/WebDownload/WebDownloader.csproj
@@ -137,16 +137,25 @@
     <Compile Include="Browser\CefWebBrowerX.Designer.cs">
       <DependentUpon>CefWebBrowerX.cs</DependentUpon>
     </Compile>
+    <Compile Include="Browser\ChromiumWebBrowserX.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Browser\ChromiumWebBrowserX.Designer.cs">
+      <DependentUpon>ChromiumWebBrowserX.cs</DependentUpon>
+    </Compile>
     <Compile Include="Browser\ControlExtensions.cs" />
     <Compile Include="CefHandler\BeforeContextMenuEvenArgs.cs" />
     <Compile Include="CefHandler\CefContextMenuHandler.cs" />
     <Compile Include="CefHandler\CefDownloadHandler.cs" />
+    <Compile Include="CefHandler\CefKeyboardHandler.cs" />
     <Compile Include="CefHandler\CefLifeSpanHandler.cs" />
     <Compile Include="CefHandler\CefRequestHandler.cs" />
     <Compile Include="CefHandler\CefResourceRequestHandler.cs" />
     <Compile Include="CefHandler\CefResourceRequestHandlerFactory.cs" />
     <Compile Include="CefHandler\CefResponseFilter.cs" />
+    <Compile Include="CefHandler\CopyImageEventArgs.cs" />
     <Compile Include="CefHandler\CreateTabEventArgs.cs" />
+    <Compile Include="CefHandler\DownloadObject.cs" />
     <Compile Include="CefHandler\NewWindowEventArgs.cs" />
     <Compile Include="Browser\TabBrowsers.cs">
       <SubType>UserControl</SubType>
