--- a/WebDownload/App.config
+++ b/WebDownload/App.config
@@ -4,4 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
         <supportedRuntime version="v2.0.50727"/>
     </startup>
+    <appSettings>
+      <!--设置浏览器window.agent，对全局有效，设置完以后需要重启-->
+      <add key="UserAgent" value=""/>
+    </appSettings>
 </configuration>
