--- a/WebDownload/WebDownloader.csproj
+++ b/WebDownload/WebDownloader.csproj
@@ -133,6 +133,9 @@
     <Reference Include="DevComponents.Instrumentation, Version=10.7.0.3, Culture=neutral, PublicKeyToken=bc4a9d761ea44ef0">
       <Private>True</Private>
     </Reference>
+    <Reference Include="SunCreate.Common">
+      <HintPath>..\dlls\SunCreate.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -223,6 +226,13 @@
     <Compile Include="Plugins\UnCodebase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\FrmSysSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Settings\FrmSysSetting.Designer.cs">
+      <DependentUpon>FrmSysSetting.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Settings\SysSettingManager.cs" />
     <EmbeddedResource Include="Browser\CefContainerControl.resx">
       <DependentUpon>CefContainerControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -251,6 +261,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Settings\FrmSysSetting.resx">
+      <DependentUpon>FrmSysSetting.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
